--- a/ML model/diabetes_model/diabetese.ipynb
+++ b/ML model/diabetes_model/diabetese.ipynb
@@ -674,7 +674,7 @@
    ],
    "source": [
     "pre_probability_x = diabtree.predict_proba(x_test)\n",
-    "pre_probability_x[:5]"
+    "pre_probability_x[:5]\n"
    ]
   }
  ],
