--- a/ML model/heart_disease2/heart_disease2.ipynb
+++ b/ML model/heart_disease2/heart_disease2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "4     0       0       0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "max        1.000000      1.000000      1.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "Name: age, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,21 +479,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>ap_hi</th>\n",
+       "      <th>ap_lo</th>\n",
+       "      <th>cholesterol</th>\n",
+       "      <th>gluc</th>\n",
+       "      <th>smoke</th>\n",
+       "      <th>active</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>50</td>\n",
+       "      <td>168</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>110</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>55</td>\n",
+       "      <td>156</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>90</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>51</td>\n",
+       "      <td>165</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>130</td>\n",
+       "      <td>70</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>48</td>\n",
+       "      <td>169</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>47</td>\n",
+       "      <td>156</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0    0\n",
-       "1    1\n",
-       "2    1\n",
-       "3    1\n",
-       "4    0\n",
-       "Name: cardio, dtype: int64"
+       "   age  height  weight  ap_hi  ap_lo  cholesterol  gluc  smoke  active\n",
+       "0   50     168    62.0    110     80            1     1      0       1\n",
+       "1   55     156    85.0    140     90            3     1      0       1\n",
+       "2   51     165    64.0    130     70            3     1      0       0\n",
+       "3   48     169    82.0    150    100            1     1      0       1\n",
+       "4   47     156    56.0    100     60            1     1      0       0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,6 +600,142 @@
     "\n",
     "\n",
     "x.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>ap_hi</th>\n",
+       "      <th>ap_lo</th>\n",
+       "      <th>cholesterol</th>\n",
+       "      <th>gluc</th>\n",
+       "      <th>smoke</th>\n",
+       "      <th>active</th>\n",
+       "      <th>cardio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>50</td>\n",
+       "      <td>168</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>110</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>55</td>\n",
+       "      <td>156</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>90</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>51</td>\n",
+       "      <td>165</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>130</td>\n",
+       "      <td>70</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>48</td>\n",
+       "      <td>169</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>47</td>\n",
+       "      <td>156</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  height  weight  ap_hi  ap_lo  cholesterol  gluc  smoke  active  cardio\n",
+       "0   50     168    62.0    110     80            1     1      0       1       0\n",
+       "1   55     156    85.0    140     90            3     1      0       1       1\n",
+       "2   51     165    64.0    130     70            3     1      0       0       1\n",
+       "3   48     169    82.0    150    100            1     1      0       1       1\n",
+       "4   47     156    56.0    100     60            1     1      0       0       0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cdf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export cdf to csv\n",
+    "cdf.to_csv('cardio_retrain.csv', index=False)"
    ]
   },
   {
@@ -728,7 +959,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.1"
   },
   "orig_nbformat": 4
  },
